--- a/playbooks/roles/setup-snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/main.yaml
@@ -18,6 +18,7 @@
       ansible.builtin.import_tasks: firewall.yaml
       tags:
         - firewall
+        - firewall-snowflake
         - snowflake
     - name: Snowflake
       ansible.builtin.import_tasks: snowflake.yaml
