--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -41,3 +41,8 @@
       ansible.builtin.import_tasks: timer.yaml
       tags:
         - timer
+
+    - name: Firewall
+      ansible.builtin.import_tasks: firewall.yaml
+      tags:
+        - firewall
