--- a/playbooks/roles/setup-snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/firewall.yaml
@@ -1,16 +1,14 @@
 ---
-- name: Install needed dependencies
-  ansible.builtin.apt:
-    name:
-      - iptables
+- name: ACCEPT incoming UDP to Snowflake
+  ansible.builtin.iptables:
+    chain: INPUT
+    protocol: udp
+    destination: "{{ ansible_facts.default_ipv4.address }}"
+    destination_ports: "32768:60999"
+    jump: ACCEPT
 
-- name: Firewall script
-  become: true
-  ansible.builtin.template:
-    src: firewall.sh.j2
-    dest: /root/firewall.sh
-    mode: "0744"
-
-- name: Start firewall
-  become: true
-  ansible.builtin.shell: /root/firewall.sh start
+- name: Save new iptables state
+  community.general.iptables_state:
+    ip_version: ipv4
+    state: saved
+    path: /etc/iptables/rules.v4
