--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -10,13 +10,16 @@
     src: firewall.sh.j2
     dest: /root/firewall.sh
     mode: "0700"
+  register: result
 
 - name: Start firewall
   become: true
   ansible.builtin.shell: /root/firewall.sh start
+  when: result.changed
 
 - name: Save new iptables state
   community.general.iptables_state:
     ip_version: ipv4
     state: saved
     path: /etc/iptables/rules.v4
+  when: result.changed
