install iptables in generic part

--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -18,6 +18,7 @@
       - apt-transport-https
       - gpg
       - gpg-agent
+      - iptables
       - iptables-persistent
       - ntp
       - unattended-upgrades
