--- a/playbooks/roles/setup/files/20tor-relay.conf
+++ b/playbooks/roles/setup/files/20tor-relay.conf
@@ -21,7 +21,8 @@ kernel.kexec_load_disabled = 1
 kernel.yama.ptrace_scope = 1
 
 # Disable User Namespaces, as it opens up a large attack surface to unprivileged users.
-user.max_user_namespaces = 0
+# tfoerste: but breaks Snowflake systemd restart
+#user.max_user_namespaces = 0
 
 # Disable tty line discipline autoloading (see CONFIG_LDISC_AUTOLOAD).
 dev.tty.ldisc_autoload = 0
