--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -2,7 +2,7 @@
 - name: Grep system log since {{ log_system_since }}
   changed_when: false
   ansible.builtin.shell: |
-    journalctl -k -g 'BUG:' -g 'Call Trace:' -g 'oom-killer' -g 'RIP:' -g 'WARNING:' --since "{{ log_system_since }}" -q
+    journalctl -g 'BUG:' -g 'Call Trace:' -g 'oom-killer' -g 'RIP:' -g 'WARNING:' -g 'OOM' -g 'status=9/KILL' --since "{{ log_system_since }}" -q
   register: result
   failed_when: result.stderr_lines | length > 0
 
