--- a/playbooks/roles/info-snowflake/tasks/clients.yaml
+++ b/playbooks/roles/info-snowflake/tasks/clients.yaml
@@ -7,6 +7,7 @@
 
 - name: File results for clients
   delegate_to: localhost
+  throttle: 1
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ ansible_facts.hostname }} {{ result.stdout }}"
