--- a/playbooks/roles/info-tor/tasks/uptime.yaml
+++ b/playbooks/roles/info-tor/tasks/uptime.yaml
@@ -13,6 +13,7 @@
 
 - name: File results for uptime
   delegate_to: localhost
+  throttle: 1
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ ansible_facts.hostname }} TorStart {{ tor_status.status.ExecMainStartTimestamp }} TorReload {{ tor_status.status.StateChangeTimestamp }} uptime {{ result.stdout }}"
