--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ interpreter_python = /usr/bin/python3
 ssh_args = -C -o IdentitiesOnly=yes -o AddressFamily=inet -o Compression=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o Protocol=2 -o ServerAliveInterval=60s
 
 forks = 50
+order = sorted
 pipelining = True
 poll_interval = 5
 
