no ssh compression

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 interpreter_python = /usr/bin/python3
-ssh_args = -C -o IdentitiesOnly=yes -o AddressFamily=inet -o Compression=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o Protocol=2 -o ServerAliveInterval=60s
+ssh_args = -C -o IdentitiesOnly=yes -o AddressFamily=inet -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o Protocol=2 -o ServerAliveInterval=60s
 
 forks = 50
 order = sorted
