--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -7,8 +7,9 @@
     ansible.builtin.apt:
       autoclean: true
       autoremove: true
-      state: latest
       cache_valid_time: 600
+      state: latest
+      update_cache: true
     ansible.builtin.copy:
       owner: root
       group: root
