--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -8,6 +8,7 @@
       autoclean: true
       autoremove: true
       cache_valid_time: 600
+      default_release: "{{ ansible_facts.distribution_release }}"
       state: latest
       update_cache: true
     ansible.builtin.copy:
