--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -7,8 +7,10 @@
     ansible.builtin.apt:
       autoclean: true
       autoremove: true
-      state: latest
       cache_valid_time: 600
+      default_release: "{{ ansible_facts.distribution_release }}"
+      state: latest
+      update_cache: true
     ansible.builtin.copy:
       owner: root
       group: root
