--- a/playbooks/roles/setup-tor/tasks/tor.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor.yaml
@@ -6,7 +6,7 @@
 
 - name: Configure repository "tor"
   ansible.builtin.apt_repository:
-    filename: "tor"
+    filename: "torproject"
     repo: "deb https://deb.torproject.org/torproject.org {{ ansible_facts.distribution_release }} main"
     state: present
 
