--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -11,11 +11,10 @@
     name:
       - git
 
-- name: Install or update Go
+- name: Install or update Go-1.21
   ansible.builtin.apt:
-    default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
-      - golang
+      - golang-1.21
 
 - name: Add the snowflake user
   ansible.builtin.user:
@@ -41,7 +40,7 @@
 - name: Go get
   become: true
   become_user: snowflake
-  ansible.builtin.command: go get
+  ansible.builtin.command: /usr/lib/go-1.21/bin/go get
   args:
     chdir: /home/snowflake/repo/proxy
   register: go_get
@@ -50,7 +49,7 @@
 - name: Go build
   become: true
   become_user: snowflake
-  ansible.builtin.command: go build
+  ansible.builtin.command: /usr/lib/go-1.21/bin/go build
   args:
     chdir: /home/snowflake/repo/proxy
   when: go_get.changed
